--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wheatherapp",
+  "name": "weatherapp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -16,6 +16,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.1",
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
